--- a/3_css/mystyle.css
+++ b/3_css/mystyle.css
@@ -27,6 +27,10 @@
 	padding: 2px;
 	}
 
+#menubar > #menulist > .menuitem.selected {
+	background-color:  #3cb371;
+}
+
 
 /*-------------ul----------------*/
 
@@ -85,4 +89,16 @@
 
 #main > h1 {
 		font-size: 28px;
+}
+
+/*--------footer--------*/
+
+#bottom {
+		background-color: #ECEAE9;
+		display: block;
+		text-align: center;
+		height: 50px;
+		border: 1px solid #CFCECE;
+		clear: both;
+		padding-top: 25px;
 }
